--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
 </div>
 <script src="js/sprite.js"></script>
 <script src="js/musicManager.js"></script>
+<script src="js/soundManager.js"></script>
 <script src="js/gameManager.js"></script>
 <!--script src="js/game.js"></!script-->
 <script src="js/tetris.js"></script>
 <script>
     var m = new musicManager();
     var t = new tetris("game");
-    var game_Manager = new gameManager();
+    var s = new soundManager();
 
-    m.play("Loginska");
+    var game_Manager = new gameManager();
+ 
+    m.play("Karinka");
     t.playerReset();
     t.update();
 
