--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     var game_Manager = new gameManager();
  
-    m.play("Karinka");
+    m.play("typea");
     t.playerReset();
     t.update();
 
