--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
 
 <script>
-    //var m = new musicManager();
+    var m = new musicManager();
    
     //var sceneScore = new scoreScene("game");
 
 
+    var game_Manager = new gameManager();
+    var sceneMode = new modeScene("game"); 
 
-    var sceneMode = new modeScene("game");
+    var s = new soundManager();
 
-    //var s = new soundManager();
-
-    //var game_Manager = new gameManager();
+    
  
     //m.play("typea");
    
