--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     var game_Manager = new gameManager();
     //var g = new game("game");
 
-    var score = new setScoreScene("game");
+    //var score = new setScoreScene("game");
 
 
     //var sceneScore = new scoreScene("game");
