--- a/index.html
+++ b/index.html
@@ -12,25 +12,12 @@
 <div class="screen">
     <canvas id="game" width="799" height="719"></canvas>
 </div>
-<script src="js/sprite.js"></script>
-<script src="js/game.js"></script>
-<script src="js/scoreScene.js"></script>
-<script src="js/musicManager.js"></script>
-<script src="js/soundManager.js"></script>
-<script src="js/gameManager.js"></script>
-<script src="js/tetris.js"></script>
-<script src="js/modeScene.js"></script>
-<script src="js/levelScene.js"></script>
-<script src="js/setScoreScene.js"></script> 
-
-
-
+<script src="js/main-dist.js"></script>
 
 <script>
     var m = new musicManager();
     var s = new soundManager();
     var game_Manager = new gameManager();   
-   
 </script>
 
 </body>
